@@ -1,121 +1,153 @@
 package com.capgemini.job_application;
-
+import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.springframework.http.HttpStatus.*;
+import java.time.LocalDate;
+import java.util.List;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.BindingResult;
+import org.springframework.validation.FieldError;
+import org.springframework.validation.ObjectError;
 import com.capgemini.job_application.controllers.ApplicationController;
-
+import com.capgemini.job_application.dtos.ApplicationViewDto;
 import com.capgemini.job_application.entities.Application;
 import com.capgemini.job_application.entities.Job;
 import com.capgemini.job_application.entities.User;
 import com.capgemini.job_application.services.ApplicationService;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+public class ApplicationControllerTest {
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-
-import org.springframework.http.MediaType;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
-import org.springframework.test.web.servlet.MockMvc;
-
-import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.List;
-
-import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-
-@WebMvcTest(ApplicationController.class)
-class ApplicationControllerTest {
-
-    @Autowired
-    private MockMvc mockMvc;
-
-    @MockitoBean
+    @Mock
     private ApplicationService applicationService;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    @InjectMocks
+    private ApplicationController applicationController;
 
-    private Application application;
-    
+    @Mock
+    private BindingResult bindingResult;
 
     @BeforeEach
-    void setUp() {
-    	User user=new User();
-    	user.setUserId(101L);
-    	Job job=new Job();
-    	job.setJobId(101L);
-        application = new Application();
-        application.setApplicationId(1L);
-        application.setJob(job);
-        application.setUser(user);
-        application.setAppliedDate(LocalDate.now());
-        application.setStatus("Pending");
+    void setup() {
+        MockitoAnnotations.openMocks(this);
+    }
+
+    private Application createSampleApplication() {
+        User user = new User();
+        user.setUserId(1L);
+        Job job = new Job();
+        job.setJobId(10L);
+        return new Application(100L, user, job, LocalDate.now(), "Pending");
     }
 
     @Test
-    void testCreateApplication() throws Exception {
-        when(applicationService.createApplication(any(Application.class))).thenReturn(application);
+    void testCreateApplication_Success() {
+        Application application = createSampleApplication();
+        when(bindingResult.hasErrors()).thenReturn(false);
+        when(applicationService.createApplication(application)).thenReturn(application);
 
-        mockMvc.perform(post("/api/application")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(application)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.applicationId").value(1L))
-                .andExpect(jsonPath("$.status").value("Pending"));
+        ResponseEntity<Application> response = applicationController.createApplication(application, bindingResult);
+
+        assertEquals(CREATED, response.getStatusCode());
+        assertEquals(application, response.getBody());
     }
 
     @Test
-    void testGetAllApplications() throws Exception {
-        List<Application> list = Arrays.asList(application);
-        when(applicationService.getAllApplication()).thenReturn(list);
+    void testCreateApplication_ValidationError() {
+        Application application = createSampleApplication();
+        when(bindingResult.hasErrors()).thenReturn(true);
+        when(bindingResult.getFieldErrors()).thenReturn(
+            List.of(new FieldError("application", "status", "Status is mandatory"))
+        );
 
-        mockMvc.perform(get("/api/application"))
-                .andExpect(status().isFound())
-                .andExpect(jsonPath("$.size()").value(1))
-                .andExpect(jsonPath("$[0].jobId").value(101L));
+        IllegalArgumentException thrown = assertThrows(IllegalArgumentException.class, () ->
+            applicationController.createApplication(application, bindingResult)
+        );
+
+        assertTrue(thrown.getMessage().contains("Status is mandatory"));
     }
 
     @Test
-    void testGetApplicationById() throws Exception {
-        when(applicationService.getApplicationById(1L)).thenReturn(application);
+    void testGetAllApplications() {
+        List<Application> apps = List.of(createSampleApplication());
+        when(applicationService.getAllApplication()).thenReturn(apps);
 
-        mockMvc.perform(get("/api/application/1"))
-                .andExpect(status().isFound())
-                .andExpect(jsonPath("$.applicationId").value(1L))
-                .andExpect(jsonPath("$.status").value("Pending"));
+        ResponseEntity<List<Application>> response = applicationController.getAllApplications();
+
+        assertEquals(OK, response.getStatusCode());
+        assertEquals(apps, response.getBody());
     }
 
     @Test
-    void testUpdateApplication() throws Exception {
-    	User user=new User();
-    	user.setUserId(501L);
-    	Job job=new Job();
-    	job.setJobId(102L);
-        Application updated = new Application();
-        updated.setApplicationId(1L);
-        updated.setJob(job);
-        updated.setUser(user);
-        updated.setAppliedDate(LocalDate.now());
-        updated.setStatus("Approved");
+    void testGetApplicationById() {
+        Application app = createSampleApplication();
+        when(applicationService.getApplicationById(100L)).thenReturn(app);
 
-        when(applicationService.updateApplication(eq(1L), any(Application.class))).thenReturn(updated);
+        ResponseEntity<Application> response = applicationController.getApplicationById(100L);
 
-        mockMvc.perform(put("/api/application/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(updated)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.status").value("Approved"))
-                .andExpect(jsonPath("$.jobId").value(102L));
+        assertEquals(OK, response.getStatusCode());
+        assertEquals(app, response.getBody());
     }
 
     @Test
-    void testDeleteApplication() throws Exception {
-        doNothing().when(applicationService).deleteApplication(1L);
+    void testUpdateApplication() {
+        Application application = createSampleApplication();
+        when(bindingResult.hasErrors()).thenReturn(false);
+        when(applicationService.updateApplication(100L, application)).thenReturn(application);
 
-        mockMvc.perform(delete("/api/application/1"))
-                .andExpect(status().isOk());
+        ResponseEntity<Application> response = applicationController.updateApplication(100L, application, bindingResult);
+
+        assertEquals(OK, response.getStatusCode());
+        assertEquals(application, response.getBody());
+    }
+
+    @Test
+    void testPatchApplication() {
+        Application application = createSampleApplication();
+        when(bindingResult.hasErrors()).thenReturn(false);
+        when(applicationService.patchApplication(100L, application)).thenReturn(application);
+
+        ResponseEntity<Application> response = applicationController.patchApplication(100L, application, bindingResult);
+
+        assertEquals(OK, response.getStatusCode());
+        assertEquals(application, response.getBody());
+    }
+
+    @Test
+    void testDeleteApplication() {
+        doNothing().when(applicationService).deleteApplication(100L);
+
+        ResponseEntity<Void> response = applicationController.deleteApplication(100L);
+
+        assertEquals(OK, response.getStatusCode());
+        assertNull(response.getBody());
+    }
+
+    @Test
+    void testFindUserUserId() {
+        List<Application> apps = List.of(createSampleApplication());
+        when(applicationService.findUserUserId(1L)).thenReturn(apps);
+
+        ResponseEntity<List<Application>> response = applicationController.findUserUserId(1L);
+
+        assertEquals(OK, response.getStatusCode());
+        assertEquals(apps, response.getBody());
+    }
+
+    @Test
+    void testFindApplicationsByUserId() {
+        ApplicationViewDto dto = new ApplicationViewDto();
+        dto.setJobTitle("Java Developer");
+        dto.setStatus("Pending");
+
+        List<ApplicationViewDto> dtos = List.of(dto);
+        when(applicationService.findApplicationsByUserId(1L)).thenReturn(dtos);
+
+        ResponseEntity<List<ApplicationViewDto>> response = applicationController.findApplicationsByUserId(1L);
+
+        assertEquals(OK, response.getStatusCode());
+        assertEquals(dtos, response.getBody());
     }
 }
